# ExecTrace

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEVELOPER_DOCS.md  Dockerfile  PROJECT_STATUS.md  README.md  Readme.txt  VIVA_DEFENSE_GUIDE.md  auto_demo  backend_report.md  build.sh  deploy.sh  docker-compose.yml  docker-entrypoint.sh  test.cpp  test_isolation.sh
backend/: build.sh  et-server  et-server-new  test_models
backend/include/: AuthDB.hpp  BTree.hpp  Database.hpp  DiskManager.hpp  Logger.hpp  Models.hpp  RateLimiter.hpp  Utils.hpp  Validation.hpp
backend/src/: read_file.hpp  server.cpp  server_backup.cpp  test_auth.cpp  test_btree.cpp  test_database.cpp  test_disk.cpp  test_models.cpp
frontend/: admin.html  analytics.html  dashboard.html  docs.html  index.html  login.html  register.html  workspace.html
include/auth/: ProjectEntry.hpp  UserEntry.hpp
include/btree/: AuthDB.hpp  BTree.hpp  DiskManager.hpp  ExecTraceDB.hpp  Hasher.hpp  Node.hpp  TraceEntry.hpp  Types.hpp
sdk/: build.sh  exectrace.cpp  exectrace.hpp  test_sdk.cpp  test_seeder.cpp  win_test.cpp
sdk/example/: demo_app.cpp
sdk/include/: exectrace.hpp
sdk/src/: exectrace.cpp
src/: cli.cpp  demo.py  main.cpp  server.cpp
src/btree/: BTree.cpp  DiskManager.cpp
